fix grammar issue, spacing, etc

--- a/src/resource/style/css.css
+++ b/src/resource/style/css.css
@@ -318,6 +318,7 @@ img.inprogress {
 
 div#overlay {
     position: fixed;
+    padding-top: 80px;
     top: 0px;
     bottom: 0px;
     right: 0px;
@@ -327,6 +328,7 @@ div#overlay {
     color: white;
     opacity: 0;
     visibility: hidden;
+    overflow: auto;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     -ms-transition: all .2s ease-in-out;
